--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,77 @@
+
 <!DOCTYPE html>
 <html>
 <head>
   <title>We're sorry, but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
+
+  .background{
+    background: linear-gradient(180deg, #6455B3 0%, #D45F84 100%);
+    position: relative;
+    overflow: hidden;
   }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
+  #home-logo{
+    color: $hivie-logo;
   }
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  .fixed-button-home {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%)
   }
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
+  .button {
+    height: 50px;
+    width: 100% !important;
+    border-radius: 8px !important;
+    font-size: 24px;
   }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  .btn-pink {
+    background-color: $hivie-purple;
+    font-family: Source Sans Pro;
+    color:#FF6498;
+    height: 50px !important;
+    border-radius: 8px !important;
+    text-decoration: none;
   }
+
+  h1{
+    font-size: 100px;
+    font-family: 'Source Sans Pro', sans-serif;
+    color:#FF6498;
+  }
+
+  h3{
+    color: #462C72;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: bold;
+  }
+
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+<body >
+
+  <div class="background">
+    <div class="home-container" style="height:100vh">
+
+      <div class="row h-75">
+        <div class="col-xs-12 col-sm-4 offset-sm-4 align-self-center" style="text-align:center;">
+        <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+          <h1 id="home-logo">500</h1>
+          <h3>We're sorry, but something went wrong...</h3>
+          <a href="https://www.hivie.life" class="btn button btn-pink">Back to HiVie</a>
+        </div>
+      </div>
+
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
+
+
